# MyPracticeDemo

./: settings.gradle
AudioAndVideo/: build.gradle
AudioAndVideo/src/androidTest/java/com/hjj/audioandvideo/: ExampleInstrumentedTest.kt
AudioAndVideo/src/main/: AndroidManifest.xml
AudioAndVideo/src/main/java/com/hjj/audioandvideo/: AudioAndVideo.kt
AudioAndVideo/src/test/java/com/hjj/audioandvideo/: ExampleUnitTest.kt
JNI/: build.gradle
JNI/src/androidTest/java/com/hjj/jni/: ExampleInstrumentedTest.java
JNI/src/main/: AndroidManifest.xml
JNI/src/main/cpp/: CMakeLists.txt  native-lib.cpp
JNI/src/main/cpp/gles/: video_play.h
JNI/src/main/cpp/opensl/: AudioEngine.h  OpenSLAudioPlay.cpp  OpenSLAudioPlay.h  audio_play.cpp
JNI/src/main/cpp/player/: YKPlayer.cpp
JNI/src/main/cpp/player/include/: YKPlayer.h
JNI/src/main/java/com/hjj/jni/: JniDemoActivity.kt
JNI/src/main/java/com/hjj/jni/data/: TestData.kt
JNI/src/main/java/com/hjj/jni/load/: JniFFmpegLoader.kt  JniLoader.kt
JNI/src/main/res/layout/: activity_jni_demo.xml
JNI/src/test/java/com/hjj/jni/: ExampleUnitTest.java
algorithm/: build.gradle
algorithm/src/androidTest/java/com/hjj/algorithm/: ExampleInstrumentedTest.kt
algorithm/src/main/: AndroidManifest.xml
algorithm/src/main/java/com/hjj/algorithm/easy/: MergeTwoLists.java  NumberOfPalindromes.java  RomanNumeralsToIntegers.java  ValidParentheses.java
algorithm/src/test/java/com/hjj/algorithm/: ExampleUnitTest.kt
app/: build.gradle
app/src/androidTest/java/com/hjj/mypracticedemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/hjj/mypracticedemo/activity/: MainActivity.kt
app/src/main/java/com/hjj/mypracticedemo/adapter/: MainAdapter.kt
app/src/main/java/com/hjj/mypracticedemo/democlass/: Test1.kt  TestAb1.kt  TestImpl.kt  javaTest1.java  javaTestAb1.java
app/src/main/res/layout/: activity_main.xml  cv_item_test.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/hjj/mypracticedemo/: ExampleUnitTest.kt
designMode/src/androidTest/java/com/hjj/designmode/: ExampleInstrumentedTest.kt
designMode/src/main/: AndroidManifest.xml
designMode/src/test/java/com/hjj/designmode/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
lib_common/: build.gradle
lib_common/src/androidTest/java/com/hjj/lib_common/: ExampleInstrumentedTest.java
lib_common/src/main/: AndroidManifest.xml
lib_common/src/main/java/com/hjj/lib_common/base/: BaseActivity.kt
lib_common/src/main/java/com/hjj/lib_common/logger/: ILogger.kt  LogUtil.kt
lib_common/src/main/java/com/hjj/lib_common/util/: Tools.kt  (+2 more)
lib_common/src/test/java/com/hjj/lib_common/: ExampleUnitTest.java
openGL/: build.gradle
openGL/src/androidTest/java/com/hjj/opengl/: ExampleInstrumentedTest.java
openGL/src/main/: AndroidManifest.xml
openGL/src/main/java/com/hjj/opengl/: OpenGLActivity.kt
openGL/src/test/java/com/hjj/opengl/: ExampleUnitTest.java
(+63 files in other folders)
